bug: footer widgets hiding behind :before element

--- a/style.css
+++ b/style.css
@@ -386,11 +386,11 @@ button:active,
 	height: 100%;
 	width: 100%;
 }
-/*
 .site-footer {
-	padding-right: 15%;
+	position: relative;
+	z-index: 20;
 }
-*/
+
 .footer-widget-container {
 	color: var(--grey-dark);
 	justify-content: flex-start;
